DOC-2106: add AI-specific icons to ‘Icons available for TinyMCE’ (#2812)

--- a/modules/ROOT/partials/configuration/icon_list.adoc
+++ b/modules/ROOT/partials/configuration/icon_list.adoc
@@ -1,184 +1,194 @@
 [cols="^,^,^",options="header"]
 |===
 |Identifier |Preview |Filename
-|`+accessibility-check+` |image:icons/accessibility-check.svg[accessibility-check.svg] |`+accessibility-check.svg+`
-|`+action-next+` |image:icons/action-next.svg[action-next.svg] |`+action-next.svg+`
-|`+action-prev+` |image:icons/action-prev.svg[action-prev.svg] |`+action-prev.svg+`
-|`+addtag+` |image:icons/addtag.svg[addtag.svg] |`+addtag.svg+`
-|`+align-center+` |image:icons/align-center.svg[align-center.svg] |`+align-center.svg+`
-|`+align-justify+` |image:icons/align-justify.svg[align-justify.svg] |`+align-justify.svg+`
-|`+align-left+` |image:icons/align-left.svg[align-left.svg] |`+align-left.svg+`
-|`+align-none+` |image:icons/align-none.svg[align-none.svg] |`+align-none.svg+`
-|`+align-right+` |image:icons/align-right.svg[align-right.svg] |`+align-right.svg+`
-|`+arrow-left+` |image:icons/arrow-left.svg[arrow-left.svg] |`+arrow-left.svg+`
-|`+arrow-right+` |image:icons/arrow-right.svg[arrow-right.svg] |`+arrow-right.svg+`
-|`+bold+` |image:icons/bold.svg[bold.svg] |`+bold.svg+`
-|`+bookmark+` |image:icons/bookmark.svg[bookmark.svg] |`+bookmark.svg+`
-|`+border-style+` |image:icons/border-style.svg[border-style.svg] |`+border-style.svg+`
-|`+border-width+` |image:icons/border-width.svg[border-width.svg] |`+border-width.svg+`
-|`+brightness+` |image:icons/brightness.svg[brightness.svg] |`+brightness.svg+`
-|`+browse+` |image:icons/browse.svg[browse.svg] |`+browse.svg+`
-|`+cancel+` |image:icons/cancel.svg[cancel.svg] |`+cancel.svg+`
-|`+cell-background-color+` |image:icons/cell-background-color.svg[cell-background-color.svg] |`+cell-background-color.svg+`
-|`+cell-border-color+` |image:icons/cell-border-color.svg[cell-border-color.svg] |`+cell-border-color.svg+`
-|`+change-case+` |image:icons/change-case.svg[change-case.svg] |`+change-case.svg+`
-|`+character-count+` |image:icons/character-count.svg[character-count.svg] |`+character-count.svg+`
-|`+checklist-rtl+` |image:icons/checklist-rtl.svg[checklist-rtl.svg] |`+checklist-rtl.svg+`
-|`+checklist+` |image:icons/checklist.svg[checklist.svg] |`+checklist.svg+`
-|`+checkmark+` |image:icons/checkmark.svg[checkmark.svg] |`+checkmark.svg+`
-|`+chevron-down+` |image:icons/chevron-down.svg[chevron-down.svg] |`+chevron-down.svg+`
-|`+chevron-left+` |image:icons/chevron-left.svg[chevron-left.svg] |`+chevron-left.svg+`
-|`+chevron-right+` |image:icons/chevron-right.svg[chevron-right.svg] |`+chevron-right.svg+`
-|`+chevron-up+` |image:icons/chevron-up.svg[chevron-up.svg] |`+chevron-up.svg+`
-|`+close+` |image:icons/close.svg[close.svg] |`+close.svg+`
-|`+code-sample+` |image:icons/code-sample.svg[code-sample.svg] |`+code-sample.svg+`
-|`+color-levels+` |image:icons/color-levels.svg[color-levels.svg] |`+color-levels.svg+`
-|`+color-picker+` |image:icons/color-picker.svg[color-picker.svg] |`+color-picker.svg+`
-|`+color-swatch-remove-color+` |image:icons/color-swatch-remove-color.svg[color-swatch-remove-color.svg] |`+color-swatch-remove-color.svg+`
-|`+color-swatch+` |image:icons/color-swatch.svg[color-swatch.svg] |`+color-swatch.svg+`
-|`+comment-add+` |image:icons/comment-add.svg[comment-add.svg] |`+comment-add.svg+`
-|`+comment+` |image:icons/comment.svg[comment.svg] |`+comment.svg+`
-|`+contrast+` |image:icons/contrast.svg[contrast.svg] |`+contrast.svg+`
-|`+copy+` |image:icons/copy.svg[copy.svg] |`+copy.svg+`
-|`+crop+` |image:icons/crop.svg[crop.svg] |`+crop.svg+`
-|`+cut-column+` |image:icons/cut-column.svg[cut-column.svg] |`+cut-column.svg+`
-|`+cut-row+` |image:icons/cut-row.svg[cut-row.svg] |`+cut-row.svg+`
-|`+cut+` |image:icons/cut.svg[cut.svg] |`+cut.svg+`
-|`+document-properties+` |image:icons/document-properties.svg[document-properties.svg] |`+document-properties.svg+`
-|`+drag+` |image:icons/drag.svg[drag.svg] |`+drag.svg+`
-|`+duplicate-column+` |image:icons/duplicate-column.svg[duplicate-column.svg] |`+duplicate-column.svg+`
-|`+duplicate-row+` |image:icons/duplicate-row.svg[duplicate-row.svg] |`+duplicate-row.svg+`
-|`+duplicate+` |image:icons/duplicate.svg[duplicate.svg] |`+duplicate.svg+`
-|`+edit-block+` |image:icons/edit-block.svg[edit-block.svg] |`+edit-block.svg+`
-|`+edit-image+` |image:icons/edit-image.svg[edit-image.svg] |`+edit-image.svg+`
-|`+embed-page+` |image:icons/embed-page.svg[embed-page.svg] |`+embed-page.svg+`
-|`+embed+` |image:icons/embed.svg[embed.svg] |`+embed.svg+`
-|`+emoji+` |image:icons/emoji.svg[emoji.svg] |`+emoji.svg+`
-|`+export+` |image:icons/export.svg[export.svg] |`+export.svg+`
-|`+fill+` |image:icons/fill.svg[fill.svg] |`+fill.svg+`
-|`+flip-horizontally+` |image:icons/flip-horizontally.svg[flip-horizontally.svg] |`+flip-horizontally.svg+`
-|`+flip-vertically+` |image:icons/flip-vertically.svg[flip-vertically.svg] |`+flip-vertically.svg+`
-|`+footnote+` |image:icons/footnote.svg[footnote.svg] |`+footnote.svg+`
-|`+format-painter+` |image:icons/format-painter.svg[format-painter.svg] |`+format-painter.svg+`
-|`+format+` |image:icons/format.svg[format.svg] |`+format.svg+`
-|`+fullscreen+` |image:icons/fullscreen.svg[fullscreen.svg] |`+fullscreen.svg+`
-|`+gallery+` |image:icons/gallery.svg[gallery.svg] |`+gallery.svg+`
-|`+gamma+` |image:icons/gamma.svg[gamma.svg] |`+gamma.svg+`
-|`+help+` |image:icons/help.svg[help.svg] |`+help.svg+`
-|`+highlight-bg-color+` |image:icons/highlight-bg-color.svg[highlight-bg-color.svg] |`+highlight-bg-color.svg+`
-|`+home+` |image:icons/home.svg[home.svg] |`+home.svg+`
-|`+horizontal-rule+` |image:icons/horizontal-rule.svg[horizontal-rule.svg] |`+horizontal-rule.svg+`
-|`+image-options+` |image:icons/image-options.svg[image-options.svg] |`+image-options.svg+`
-|`+image+` |image:icons/image.svg[image.svg] |`+image.svg+`
-|`+indent+` |image:icons/indent.svg[indent.svg] |`+indent.svg+`
-|`+info+` |image:icons/info.svg[info.svg] |`+info.svg+`
-|`+insert-character+` |image:icons/insert-character.svg[insert-character.svg] |`+insert-character.svg+`
-|`+insert-time+` |image:icons/insert-time.svg[insert-time.svg] |`+insert-time.svg+`
-|`+invert+` |image:icons/invert.svg[invert.svg] |`+invert.svg+`
-|`+italic+` |image:icons/italic.svg[italic.svg] |`+italic.svg+`
-|`+language+` |image:icons/language.svg[language.svg] |`+language.svg+`
-|`+line-height+` |image:icons/line-height.svg[line-height.svg] |`+line-height.svg+`
-|`+line+` |image:icons/line.svg[line.svg] |`+line.svg+`
-|`+link+` |image:icons/link.svg[link.svg] |`+link.svg+`
-|`+list-bull-circle+` |image:icons/list-bull-circle.svg[list-bull-circle.svg] |`+list-bull-circle.svg+`
-|`+list-bull-default+` |image:icons/list-bull-default.svg[list-bull-default.svg] |`+list-bull-default.svg+`
-|`+list-bull-square+` |image:icons/list-bull-square.svg[list-bull-square.svg] |`+list-bull-square.svg+`
-|`+list-num-default-rtl+` |image:icons/list-num-default-rtl.svg[list-num-default-rtl.svg] |`+list-num-default-rtl.svg+`
-|`+list-num-default+` |image:icons/list-num-default.svg[list-num-default.svg] |`+list-num-default.svg+`
-|`+list-num-lower-alpha-rtl+` |image:icons/list-num-lower-alpha-rtl.svg[list-num-lower-alpha-rtl.svg] |`+list-num-lower-alpha-rtl.svg+`
-|`+list-num-lower-alpha+` |image:icons/list-num-lower-alpha.svg[list-num-lower-alpha.svg] |`+list-num-lower-alpha.svg+`
-|`+list-num-lower-greek-rtl+` |image:icons/list-num-lower-greek-rtl.svg[list-num-lower-greek-rtl.svg] |`+list-num-lower-greek-rtl.svg+`
-|`+list-num-lower-greek+` |image:icons/list-num-lower-greek.svg[list-num-lower-greek.svg] |`+list-num-lower-greek.svg+`
-|`+list-num-lower-roman-rtl+` |image:icons/list-num-lower-roman-rtl.svg[list-num-lower-roman-rtl.svg] |`+list-num-lower-roman-rtl.svg+`
-|`+list-num-lower-roman+` |image:icons/list-num-lower-roman.svg[list-num-lower-roman.svg] |`+list-num-lower-roman.svg+`
-|`+list-num-upper-alpha-rtl+` |image:icons/list-num-upper-alpha-rtl.svg[list-num-upper-alpha-rtl.svg] |`+list-num-upper-alpha-rtl.svg+`
-|`+list-num-upper-alpha+` |image:icons/list-num-upper-alpha.svg[list-num-upper-alpha.svg] |`+list-num-upper-alpha.svg+`
-|`+list-num-upper-roman-rtl+` |image:icons/list-num-upper-roman-rtl.svg[list-num-upper-roman-rtl.svg] |`+list-num-upper-roman-rtl.svg+`
-|`+list-num-upper-roman+` |image:icons/list-num-upper-roman.svg[list-num-upper-roman.svg] |`+list-num-upper-roman.svg+`
-|`+lock+` |image:icons/lock.svg[lock.svg] |`+lock.svg+`
-|`+ltr+` |image:icons/ltr.svg[ltr.svg] |`+ltr.svg+`
-|`+more-drawer+` |image:icons/more-drawer.svg[more-drawer.svg] |`+more-drawer.svg+`
-|`+new-document+` |image:icons/new-document.svg[new-document.svg] |`+new-document.svg+`
-|`+new-tab+` |image:icons/new-tab.svg[new-tab.svg] |`+new-tab.svg+`
-|`+non-breaking+` |image:icons/non-breaking.svg[non-breaking.svg] |`+non-breaking.svg+`
-|`+notice+` |image:icons/notice.svg[notice.svg] |`+notice.svg+`
-|`+ordered-list-rtl+` |image:icons/ordered-list-rtl.svg[ordered-list-rtl.svg] |`+ordered-list-rtl.svg+`
-|`+ordered-list+` |image:icons/ordered-list.svg[ordered-list.svg] |`+ordered-list.svg+`
-|`+orientation+` |image:icons/orientation.svg[orientation.svg] |`+orientation.svg+`
-|`+outdent+` |image:icons/outdent.svg[outdent.svg] |`+outdent.svg+`
-|`+page-break+` |image:icons/page-break.svg[page-break.svg] |`+page-break.svg+`
-|`+paragraph+` |image:icons/paragraph.svg[paragraph.svg] |`+paragraph.svg+`
-|`+paste-column-after+` |image:icons/paste-column-after.svg[paste-column-after.svg] |`+paste-column-after.svg+`
-|`+paste-column-before+` |image:icons/paste-column-before.svg[paste-column-before.svg] |`+paste-column-before.svg+`
-|`+paste-row-after+` |image:icons/paste-row-after.svg[paste-row-after.svg] |`+paste-row-after.svg+`
-|`+paste-row-before+` |image:icons/paste-row-before.svg[paste-row-before.svg] |`+paste-row-before.svg+`
-|`+paste+` |image:icons/paste.svg[paste.svg] |`+paste.svg+`
-|`+paste-text+` |image:icons/paste-text.svg[paste-text.svg] |`+paste-text.svg+`
-|`+permanent-pen+` |image:icons/permanent-pen.svg[permanent-pen.svg] |`+permanent-pen.svg+`
-|`+plus+` |image:icons/plus.svg[plus.svg] |`+plus.svg+`
-|`+preferences+` |image:icons/preferences.svg[preferences.svg] |`+preferences.svg+`
-|`+preview+` |image:icons/preview.svg[preview.svg] |`+preview.svg+`
-|`+print+` |image:icons/print.svg[print.svg] |`+print.svg+`
-|`+quote+` |image:icons/quote.svg[quote.svg] |`+quote.svg+`
-|`+redo+` |image:icons/redo.svg[redo.svg] |`+redo.svg+`
-|`+reload+` |image:icons/reload.svg[reload.svg] |`+reload.svg+`
-|`+remove-formatting+` |image:icons/remove-formatting.svg[remove-formatting.svg] |`+remove-formatting.svg+`
-|`+remove+` |image:icons/remove.svg[remove.svg] |`+remove.svg+`
-|`+resize-handle+` |image:icons/resize-handle.svg[resize-handle.svg] |`+resize-handle.svg+`
-|`+resize+` |image:icons/resize.svg[resize.svg] |`+resize.svg+`
-|`+restore-draft+` |image:icons/restore-draft.svg[restore-draft.svg] |`+restore-draft.svg+`
-|`+rotate-left+` |image:icons/rotate-left.svg[rotate-left.svg] |`+rotate-left.svg+`
-|`+rotate-right+` |image:icons/rotate-right.svg[rotate-right.svg] |`+rotate-right.svg+`
-|`+rtl+` |image:icons/rtl.svg[rtl.svg] |`+rtl.svg+`
-|`+save+` |image:icons/save.svg[save.svg] |`+save.svg+`
-|`+search+` |image:icons/search.svg[search.svg] |`+search.svg+`
-|`+select-all+` |image:icons/select-all.svg[select-all.svg] |`+select-all.svg+`
-|`+selected+` |image:icons/selected.svg[selected.svg] |`+selected.svg+`
-|`+settings+` |image:icons/settings.svg[settings.svg] |`+settings.svg+`
-|`+sharpen+` |image:icons/sharpen.svg[sharpen.svg] |`+sharpen.svg+`
-|`+sourcecode+` |image:icons/sourcecode.svg[sourcecode.svg] |`+sourcecode.svg+`
-|`+spell-check+` |image:icons/spell-check.svg[spell-check.svg] |`+spell-check.svg+`
-|`+strike-through+` |image:icons/strike-through.svg[strike-through.svg] |`+strike-through.svg+`
-|`+subscript+` |image:icons/subscript.svg[subscript.svg] |`+subscript.svg+`
-|`+superscript+` |image:icons/superscript.svg[superscript.svg] |`+superscript.svg+`
-|`+table-caption+` |image:icons/table-caption.svg[table-caption.svg] |`+table-caption.svg+`
-|`+table-cell-classes+` |image:icons/table-cell-classes.svg[table-cell-classes.svg] |`+table-cell-classes.svg+`
-|`+table-cell-properties+` |image:icons/table-cell-properties.svg[table-cell-properties.svg] |`+table-cell-properties.svg+`
-|`+table-cell-select-all+` |image:icons/table-cell-select-all.svg[table-cell-select-all.svg] |`+table-cell-select-all.svg+`
-|`+table-cell-select-inner+` |image:icons/table-cell-select-inner.svg[table-cell-select-inner.svg] |`+table-cell-select-inner.svg+`
-|`+table-classes+` |image:icons/table-classes.svg[table-classes.svg] |`+table-classes.svg+`
-|`+table-delete-column+` |image:icons/table-delete-column.svg[table-delete-column.svg] |`+table-delete-column.svg+`
-|`+table-delete-row+` |image:icons/table-delete-row.svg[table-delete-row.svg] |`+table-delete-row.svg+`
-|`+table-delete-table+` |image:icons/table-delete-table.svg[table-delete-table.svg] |`+table-delete-table.svg+`
-|`+table-insert-column-after+` |image:icons/table-insert-column-after.svg[table-insert-column-after.svg] |`+table-insert-column-after.svg+`
-|`+table-insert-column-before+` |image:icons/table-insert-column-before.svg[table-insert-column-before.svg] |`+table-insert-column-before.svg+`
-|`+table-insert-row-above+` |image:icons/table-insert-row-above.svg[table-insert-row-above.svg] |`+table-insert-row-above.svg+`
-|`+table-insert-row-after+` |image:icons/table-insert-row-after.svg[table-insert-row-after.svg] |`+table-insert-row-after.svg+`
-|`+table-left-header+` |image:icons/table-left-header.svg[table-left-header.svg] |`+table-left-header.svg+`
-|`+table-merge-cells+` |image:icons/table-merge-cells.svg[table-merge-cells.svg] |`+table-merge-cells.svg+`
-|`+table-row-numbering-rtl+` |image:icons/table-row-numbering-rtl.svg[table-row-numbering-rtl.svg] |`+table-row-numbering-rtl.svg+`
-|`+table-row-numbering+` |image:icons/table-row-numbering.svg[table-row-numbering.svg] |`+table-row-numbering.svg+`
-|`+table-row-properties+` |image:icons/table-row-properties.svg[table-row-properties.svg] |`+table-row-properties.svg+`
-|`+table-split-cells+` |image:icons/table-split-cells.svg[table-split-cells.svg] |`+table-split-cells.svg+`
-|`+table+` |image:icons/table.svg[table.svg] |`+table.svg+`
-|`+table-top-header+` |image:icons/table-top-header.svg[table-top-header.svg] |`+table-top-header.svg+`
-|`+template+` |image:icons/template.svg[template.svg] |`+template.svg+`
-|`+temporary-placeholder+` |image:icons/temporary-placeholder.svg[temporary-placeholder.svg] |`+temporary-placeholder.svg+`
-|`+text-color+` |image:icons/text-color.svg[text-color.svg] |`+text-color.svg+`
-|`+toc+` |image:icons/toc.svg[toc.svg] |`+toc.svg+`
-|`+translate+` |image:icons/translate.svg[translate.svg] |`+translate.svg+`
-|`+underline+` |image:icons/underline.svg[underline.svg] |`+underline.svg+`
-|`+undo+` |image:icons/undo.svg[undo.svg] |`+undo.svg+`
-|`+unlink+` |image:icons/unlink.svg[unlink.svg] |`+unlink.svg+`
-|`+unlock+` |image:icons/unlock.svg[unlock.svg] |`+unlock.svg+`
-|`+unordered-list+` |image:icons/unordered-list.svg[unordered-list.svg] |`+unordered-list.svg+`
-|`+unselected+` |image:icons/unselected.svg[unselected.svg] |`+unselected.svg+`
-|`+upload+` |image:icons/upload.svg[upload.svg] |`+upload.svg+`
-|`+user+` |image:icons/user.svg[user.svg] |`+user.svg+`
-|`+vertical-align+` |image:icons/vertical-align.svg[vertical-align.svg] |`+vertical-align.svg+`
-|`+visualblocks+` |image:icons/visualblocks.svg[visualblocks.svg] |`+visualblocks.svg+`
-|`+visualchars+` |image:icons/visualchars.svg[visualchars.svg] |`+visualchars.svg+`
-|`+warning+` |image:icons/warning.svg[warning.svg] |`+warning.svg+`
-|`+zoom-in+` |image:icons/zoom-in.svg[zoom-in.svg] |`+zoom-in.svg+`
-|`+zoom-out+` |image:icons/zoom-out.svg[zoom-out.svg] |`+zoom-out.svg+`
+| `+accessibility-check+` | image:icons/accessibility-check.svg[accessibility-check.svg] | `+accessibility-check.svg+`
+| `+accordion-toggle+` | image:icons/accordion-toggle.svg[accordion-toggle.svg] | `+accordion-toggle.svg+`
+| `+accordion+` | image:icons/accordion.svg[accordion.svg] | `+accordion.svg+`
+| `+action-next+` | image:icons/action-next.svg[action-next.svg] | `+action-next.svg+`
+| `+action-prev+` | image:icons/action-prev.svg[action-prev.svg] | `+action-prev.svg+`
+| `+addtag+` | image:icons/addtag.svg[addtag.svg] | `+addtag.svg+`
+| `+ai-prompt+` | image:icons/ai-prompt.svg[ai-prompt.svg] | `+ai-prompt.svg+`
+| `+ai+` | image:icons/ai.svg[ai.svg] | `+ai.svg+`
+| `+align-center+` | image:icons/align-center.svg[align-center.svg] | `+align-center.svg+`
+| `+align-justify+` | image:icons/align-justify.svg[align-justify.svg] | `+align-justify.svg+`
+| `+align-left+` | image:icons/align-left.svg[align-left.svg] | `+align-left.svg+`
+| `+align-none+` | image:icons/align-none.svg[align-none.svg] | `+align-none.svg+`
+| `+align-right+` | image:icons/align-right.svg[align-right.svg] | `+align-right.svg+`
+| `+arrow-left+` | image:icons/arrow-left.svg[arrow-left.svg] | `+arrow-left.svg+`
+| `+arrow-right+` | image:icons/arrow-right.svg[arrow-right.svg] | `+arrow-right.svg+`
+| `+bold+` | image:icons/bold.svg[bold.svg] | `+bold.svg+`
+| `+bookmark+` | image:icons/bookmark.svg[bookmark.svg] | `+bookmark.svg+`
+| `+border-style+` | image:icons/border-style.svg[border-style.svg] | `+border-style.svg+`
+| `+border-width+` | image:icons/border-width.svg[border-width.svg] | `+border-width.svg+`
+| `+brightness+` | image:icons/brightness.svg[brightness.svg] | `+brightness.svg+`
+| `+browse+` | image:icons/browse.svg[browse.svg] | `+browse.svg+`
+| `+cancel+` | image:icons/cancel.svg[cancel.svg] | `+cancel.svg+`
+| `+cell-background-color+` | image:icons/cell-background-color.svg[cell-background-color.svg] | `+cell-background-color.svg+`
+| `+cell-border-color+` | image:icons/cell-border-color.svg[cell-border-color.svg] | `+cell-border-color.svg+`
+| `+change-case+` | image:icons/change-case.svg[change-case.svg] | `+change-case.svg+`
+| `+character-count+` | image:icons/character-count.svg[character-count.svg] | `+character-count.svg+`
+| `+checklist-rtl+` | image:icons/checklist-rtl.svg[checklist-rtl.svg] | `+checklist-rtl.svg+`
+| `+checklist+` | image:icons/checklist.svg[checklist.svg] | `+checklist.svg+`
+| `+checkmark+` | image:icons/checkmark.svg[checkmark.svg] | `+checkmark.svg+`
+| `+chevron-down+` | image:icons/chevron-down.svg[chevron-down.svg] | `+chevron-down.svg+`
+| `+chevron-left+` | image:icons/chevron-left.svg[chevron-left.svg] | `+chevron-left.svg+`
+| `+chevron-right+` | image:icons/chevron-right.svg[chevron-right.svg] | `+chevron-right.svg+`
+| `+chevron-up+` | image:icons/chevron-up.svg[chevron-up.svg] | `+chevron-up.svg+`
+| `+close+` | image:icons/close.svg[close.svg] | `+close.svg+`
+| `+code-sample+` | image:icons/code-sample.svg[code-sample.svg] | `+code-sample.svg+`
+| `+color-levels+` | image:icons/color-levels.svg[color-levels.svg] | `+color-levels.svg+`
+| `+color-picker+` | image:icons/color-picker.svg[color-picker.svg] | `+color-picker.svg+`
+| `+color-swatch-remove-color+` | image:icons/color-swatch-remove-color.svg[color-swatch-remove-color.svg] | `+color-swatch-remove-color.svg+`
+| `+color-swatch+` | image:icons/color-swatch.svg[color-swatch.svg] | `+color-swatch.svg+`
+| `+comment-add+` | image:icons/comment-add.svg[comment-add.svg] | `+comment-add.svg+`
+| `+comment+` | image:icons/comment.svg[comment.svg] | `+comment.svg+`
+| `+contrast+` | image:icons/contrast.svg[contrast.svg] | `+contrast.svg+`
+| `+copy+` | image:icons/copy.svg[copy.svg] | `+copy.svg+`
+| `+crop+` | image:icons/crop.svg[crop.svg] | `+crop.svg+`
+| `+cut-column+` | image:icons/cut-column.svg[cut-column.svg] | `+cut-column.svg+`
+| `+cut-row+` | image:icons/cut-row.svg[cut-row.svg] | `+cut-row.svg+`
+| `+cut+` | image:icons/cut.svg[cut.svg] | `+cut.svg+`
+| `+document-properties+` | image:icons/document-properties.svg[document-properties.svg] | `+document-properties.svg+`
+| `+drag+` | image:icons/drag.svg[drag.svg] | `+drag.svg+`
+| `+duplicate-column+` | image:icons/duplicate-column.svg[duplicate-column.svg] | `+duplicate-column.svg+`
+| `+duplicate-row+` | image:icons/duplicate-row.svg[duplicate-row.svg] | `+duplicate-row.svg+`
+| `+duplicate+` | image:icons/duplicate.svg[duplicate.svg] | `+duplicate.svg+`
+| `+edit-block+` | image:icons/edit-block.svg[edit-block.svg] | `+edit-block.svg+`
+| `+edit-image+` | image:icons/edit-image.svg[edit-image.svg] | `+edit-image.svg+`
+| `+embed-page+` | image:icons/embed-page.svg[embed-page.svg] | `+embed-page.svg+`
+| `+embed+` | image:icons/embed.svg[embed.svg] | `+embed.svg+`
+| `+emoji+` | image:icons/emoji.svg[emoji.svg] | `+emoji.svg+`
+| `+export+` | image:icons/export.svg[export.svg] | `+export.svg+`
+| `+fill+` | image:icons/fill.svg[fill.svg] | `+fill.svg+`
+| `+flip-horizontally+` | image:icons/flip-horizontally.svg[flip-horizontally.svg] | `+flip-horizontally.svg+`
+| `+flip-vertically+` | image:icons/flip-vertically.svg[flip-vertically.svg] | `+flip-vertically.svg+`
+| `+footnote+` | image:icons/footnote.svg[footnote.svg] | `+footnote.svg+`
+| `+format-painter+` | image:icons/format-painter.svg[format-painter.svg] | `+format-painter.svg+`
+| `+format+` | image:icons/format.svg[format.svg] | `+format.svg+`
+| `+fullscreen+` | image:icons/fullscreen.svg[fullscreen.svg] | `+fullscreen.svg+`
+| `+gallery+` | image:icons/gallery.svg[gallery.svg] | `+gallery.svg+`
+| `+gamma+` | image:icons/gamma.svg[gamma.svg] | `+gamma.svg+`
+| `+help+` | image:icons/help.svg[help.svg] | `+help.svg+`
+| `+highlight-bg-color+` | image:icons/highlight-bg-color.svg[highlight-bg-color.svg] | `+highlight-bg-color.svg+`
+| `+home+` | image:icons/home.svg[home.svg] | `+home.svg+`
+| `+horizontal-rule+` | image:icons/horizontal-rule.svg[horizontal-rule.svg] | `+horizontal-rule.svg+`
+| `+image-options+` | image:icons/image-options.svg[image-options.svg] | `+image-options.svg+`
+| `+image+` | image:icons/image.svg[image.svg] | `+image.svg+`
+| `+indent+` | image:icons/indent.svg[indent.svg] | `+indent.svg+`
+| `+info+` | image:icons/info.svg[info.svg] | `+info.svg+`
+| `+insert-character+` | image:icons/insert-character.svg[insert-character.svg] | `+insert-character.svg+`
+| `+insert-time+` | image:icons/insert-time.svg[insert-time.svg] | `+insert-time.svg+`
+| `+invert+` | image:icons/invert.svg[invert.svg] | `+invert.svg+`
+| `+italic+` | image:icons/italic.svg[italic.svg] | `+italic.svg+`
+| `+language+` | image:icons/language.svg[language.svg] | `+language.svg+`
+| `+line-height+` | image:icons/line-height.svg[line-height.svg] | `+line-height.svg+`
+| `+line+` | image:icons/line.svg[line.svg] | `+line.svg+`
+| `+link+` | image:icons/link.svg[link.svg] | `+link.svg+`
+| `+list-bull-circle+` | image:icons/list-bull-circle.svg[list-bull-circle.svg] | `+list-bull-circle.svg+`
+| `+list-bull-default+` | image:icons/list-bull-default.svg[list-bull-default.svg] | `+list-bull-default.svg+`
+| `+list-bull-square+` | image:icons/list-bull-square.svg[list-bull-square.svg] | `+list-bull-square.svg+`
+| `+list-num-default-rtl+` | image:icons/list-num-default-rtl.svg[list-num-default-rtl.svg] | `+list-num-default-rtl.svg+`
+| `+list-num-default+` | image:icons/list-num-default.svg[list-num-default.svg] | `+list-num-default.svg+`
+| `+list-num-lower-alpha-rtl+` | image:icons/list-num-lower-alpha-rtl.svg[list-num-lower-alpha-rtl.svg] | `+list-num-lower-alpha-rtl.svg+`
+| `+list-num-lower-alpha+` | image:icons/list-num-lower-alpha.svg[list-num-lower-alpha.svg] | `+list-num-lower-alpha.svg+`
+| `+list-num-lower-greek-rtl+` | image:icons/list-num-lower-greek-rtl.svg[list-num-lower-greek-rtl.svg] | `+list-num-lower-greek-rtl.svg+`
+| `+list-num-lower-greek+` | image:icons/list-num-lower-greek.svg[list-num-lower-greek.svg] | `+list-num-lower-greek.svg+`
+| `+list-num-lower-roman-rtl+` | image:icons/list-num-lower-roman-rtl.svg[list-num-lower-roman-rtl.svg] | `+list-num-lower-roman-rtl.svg+`
+| `+list-num-lower-roman+` | image:icons/list-num-lower-roman.svg[list-num-lower-roman.svg] | `+list-num-lower-roman.svg+`
+| `+list-num-upper-alpha-rtl+` | image:icons/list-num-upper-alpha-rtl.svg[list-num-upper-alpha-rtl.svg] | `+list-num-upper-alpha-rtl.svg+`
+| `+list-num-upper-alpha+` | image:icons/list-num-upper-alpha.svg[list-num-upper-alpha.svg] | `+list-num-upper-alpha.svg+`
+| `+list-num-upper-roman-rtl+` | image:icons/list-num-upper-roman-rtl.svg[list-num-upper-roman-rtl.svg] | `+list-num-upper-roman-rtl.svg+`
+| `+list-num-upper-roman+` | image:icons/list-num-upper-roman.svg[list-num-upper-roman.svg] | `+list-num-upper-roman.svg+`
+| `+lock+` | image:icons/lock.svg[lock.svg] | `+lock.svg+`
+| `+ltr+` | image:icons/ltr.svg[ltr.svg] | `+ltr.svg+`
+| `+minus+` | image:icons/minus.svg[minus.svg] | `+minus.svg+`
+| `+more-drawer+` | image:icons/more-drawer.svg[more-drawer.svg] | `+more-drawer.svg+`
+| `+new-document+` | image:icons/new-document.svg[new-document.svg] | `+new-document.svg+`
+| `+new-tab+` | image:icons/new-tab.svg[new-tab.svg] | `+new-tab.svg+`
+| `+non-breaking+` | image:icons/non-breaking.svg[non-breaking.svg] | `+non-breaking.svg+`
+| `+notice+` | image:icons/notice.svg[notice.svg] | `+notice.svg+`
+| `+ordered-list-rtl+` | image:icons/ordered-list-rtl.svg[ordered-list-rtl.svg] | `+ordered-list-rtl.svg+`
+| `+ordered-list+` | image:icons/ordered-list.svg[ordered-list.svg] | `+ordered-list.svg+`
+| `+orientation+` | image:icons/orientation.svg[orientation.svg] | `+orientation.svg+`
+| `+outdent+` | image:icons/outdent.svg[outdent.svg] | `+outdent.svg+`
+| `+page-break+` | image:icons/page-break.svg[page-break.svg] | `+page-break.svg+`
+| `+paragraph+` | image:icons/paragraph.svg[paragraph.svg] | `+paragraph.svg+`
+| `+paste-column-after+` | image:icons/paste-column-after.svg[paste-column-after.svg] | `+paste-column-after.svg+`
+| `+paste-column-before+` | image:icons/paste-column-before.svg[paste-column-before.svg] | `+paste-column-before.svg+`
+| `+paste-row-after+` | image:icons/paste-row-after.svg[paste-row-after.svg] | `+paste-row-after.svg+`
+| `+paste-row-before+` | image:icons/paste-row-before.svg[paste-row-before.svg] | `+paste-row-before.svg+`
+| `+paste-text+` | image:icons/paste-text.svg[paste-text.svg] | `+paste-text.svg+`
+| `+paste+` | image:icons/paste.svg[paste.svg] | `+paste.svg+`
+| `+permanent-pen+` | image:icons/permanent-pen.svg[permanent-pen.svg] | `+permanent-pen.svg+`
+| `+plus+` | image:icons/plus.svg[plus.svg] | `+plus.svg+`
+| `+preferences+` | image:icons/preferences.svg[preferences.svg] | `+preferences.svg+`
+| `+preview+` | image:icons/preview.svg[preview.svg] | `+preview.svg+`
+| `+print+` | image:icons/print.svg[print.svg] | `+print.svg+`
+| `+quote+` | image:icons/quote.svg[quote.svg] | `+quote.svg+`
+| `+redo+` | image:icons/redo.svg[redo.svg] | `+redo.svg+`
+| `+reload+` | image:icons/reload.svg[reload.svg] | `+reload.svg+`
+| `+remove-formatting+` | image:icons/remove-formatting.svg[remove-formatting.svg] | `+remove-formatting.svg+`
+| `+remove+` | image:icons/remove.svg[remove.svg] | `+remove.svg+`
+| `+resize-handle+` | image:icons/resize-handle.svg[resize-handle.svg] | `+resize-handle.svg+`
+| `+resize+` | image:icons/resize.svg[resize.svg] | `+resize.svg+`
+| `+restore-draft+` | image:icons/restore-draft.svg[restore-draft.svg] | `+restore-draft.svg+`
+| `+rotate-left+` | image:icons/rotate-left.svg[rotate-left.svg] | `+rotate-left.svg+`
+| `+rotate-right+` | image:icons/rotate-right.svg[rotate-right.svg] | `+rotate-right.svg+`
+| `+rtl+` | image:icons/rtl.svg[rtl.svg] | `+rtl.svg+`
+| `+save+` | image:icons/save.svg[save.svg] | `+save.svg+`
+| `+search+` | image:icons/search.svg[search.svg] | `+search.svg+`
+| `+select-all+` | image:icons/select-all.svg[select-all.svg] | `+select-all.svg+`
+| `+selected+` | image:icons/selected.svg[selected.svg] | `+selected.svg+`
+| `+send+` | image:icons/send.svg[send.svg] | `+send.svg+`
+| `+settings+` | image:icons/settings.svg[settings.svg] | `+settings.svg+`
+| `+sharpen+` | image:icons/sharpen.svg[sharpen.svg] | `+sharpen.svg+`
+| `+sourcecode+` | image:icons/sourcecode.svg[sourcecode.svg] | `+sourcecode.svg+`
+| `+spell-check+` | image:icons/spell-check.svg[spell-check.svg] | `+spell-check.svg+`
+| `+strike-through+` | image:icons/strike-through.svg[strike-through.svg] | `+strike-through.svg+`
+| `+subscript+` | image:icons/subscript.svg[subscript.svg] | `+subscript.svg+`
+| `+superscript+` | image:icons/superscript.svg[superscript.svg] | `+superscript.svg+`
+| `+table-caption+` | image:icons/table-caption.svg[table-caption.svg] | `+table-caption.svg+`
+| `+table-cell-classes+` | image:icons/table-cell-classes.svg[table-cell-classes.svg] | `+table-cell-classes.svg+`
+| `+table-cell-properties+` | image:icons/table-cell-properties.svg[table-cell-properties.svg] | `+table-cell-properties.svg+`
+| `+table-cell-select-all+` | image:icons/table-cell-select-all.svg[table-cell-select-all.svg] | `+table-cell-select-all.svg+`
+| `+table-cell-select-inner+` | image:icons/table-cell-select-inner.svg[table-cell-select-inner.svg] | `+table-cell-select-inner.svg+`
+| `+table-classes+` | image:icons/table-classes.svg[table-classes.svg] | `+table-classes.svg+`
+| `+table-delete-column+` | image:icons/table-delete-column.svg[table-delete-column.svg] | `+table-delete-column.svg+`
+| `+table-delete-row+` | image:icons/table-delete-row.svg[table-delete-row.svg] | `+table-delete-row.svg+`
+| `+table-delete-table+` | image:icons/table-delete-table.svg[table-delete-table.svg] | `+table-delete-table.svg+`
+| `+table-insert-column-after+` | image:icons/table-insert-column-after.svg[table-insert-column-after.svg] | `+table-insert-column-after.svg+`
+| `+table-insert-column-before+` | image:icons/table-insert-column-before.svg[table-insert-column-before.svg] | `+table-insert-column-before.svg+`
+| `+table-insert-row-above+` | image:icons/table-insert-row-above.svg[table-insert-row-above.svg] | `+table-insert-row-above.svg+`
+| `+table-insert-row-after+` | image:icons/table-insert-row-after.svg[table-insert-row-after.svg] | `+table-insert-row-after.svg+`
+| `+table-left-header+` | image:icons/table-left-header.svg[table-left-header.svg] | `+table-left-header.svg+`
+| `+table-merge-cells+` | image:icons/table-merge-cells.svg[table-merge-cells.svg] | `+table-merge-cells.svg+`
+| `+table-row-numbering-rtl+` | image:icons/table-row-numbering-rtl.svg[table-row-numbering-rtl.svg] | `+table-row-numbering-rtl.svg+`
+| `+table-row-numbering+` | image:icons/table-row-numbering.svg[table-row-numbering.svg] | `+table-row-numbering.svg+`
+| `+table-row-properties+` | image:icons/table-row-properties.svg[table-row-properties.svg] | `+table-row-properties.svg+`
+| `+table-split-cells+` | image:icons/table-split-cells.svg[table-split-cells.svg] | `+table-split-cells.svg+`
+| `+table-top-header+` | image:icons/table-top-header.svg[table-top-header.svg] | `+table-top-header.svg+`
+| `+table+` | image:icons/table.svg[table.svg] | `+table.svg+`
+| `+template-add+` | image:icons/template-add.svg[template-add.svg] | `+template-add.svg+`
+| `+template+` | image:icons/template.svg[template.svg] | `+template.svg+`
+| `+temporary-placeholder+` | image:icons/temporary-placeholder.svg[temporary-placeholder.svg] | `+temporary-placeholder.svg+`
+| `+text-color+` | image:icons/text-color.svg[text-color.svg] | `+text-color.svg+`
+| `+text-size-decrease+` | image:icons/text-size-decrease.svg[text-size-decrease.svg] | `+text-size-decrease.svg+`
+| `+text-size-increase+` | image:icons/text-size-increase.svg[text-size-increase.svg] | `+text-size-increase.svg+`
+| `+toc+` | image:icons/toc.svg[toc.svg] | `+toc.svg+`
+| `+translate+` | image:icons/translate.svg[translate.svg] | `+translate.svg+`
+| `+typography+` | image:icons/typography.svg[typography.svg] | `+typography.svg+`
+| `+underline+` | image:icons/underline.svg[underline.svg] | `+underline.svg+`
+| `+undo+` | image:icons/undo.svg[undo.svg] | `+undo.svg+`
+| `+unlink+` | image:icons/unlink.svg[unlink.svg] | `+unlink.svg+`
+| `+unlock+` | image:icons/unlock.svg[unlock.svg] | `+unlock.svg+`
+| `+unordered-list+` | image:icons/unordered-list.svg[unordered-list.svg] | `+unordered-list.svg+`
+| `+unselected+` | image:icons/unselected.svg[unselected.svg] | `+unselected.svg+`
+| `+upload+` | image:icons/upload.svg[upload.svg] | `+upload.svg+`
+| `+user+` | image:icons/user.svg[user.svg] | `+user.svg+`
+| `+vertical-align+` | image:icons/vertical-align.svg[vertical-align.svg] | `+vertical-align.svg+`
+| `+visualblocks+` | image:icons/visualblocks.svg[visualblocks.svg] | `+visualblocks.svg+`
+| `+visualchars+` | image:icons/visualchars.svg[visualchars.svg] | `+visualchars.svg+`
+| `+warning+` | image:icons/warning.svg[warning.svg] | `+warning.svg+`
+| `+zoom-in+` | image:icons/zoom-in.svg[zoom-in.svg] | `+zoom-in.svg+`
+| `+zoom-out+` | image:icons/zoom-out.svg[zoom-out.svg] | `+zoom-out.svg+`
 |===
