DOC-2026: AI Premium Plugin Documentation (#2819)
Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>
Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>
Co-authored-by: mkzhx <mkzh.org@gmail.com>
Co-authored-by: Mike Chau <mike.chau@tiny.cloud>
Co-authored-by: MitchCTiny <89239746+MitchCTiny@users.noreply.github.com>

--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -31,6 +31,11 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
+:pluginname: AI Assistant
+:plugincode: ai
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
+:plugincategory: premium
 :pluginname: Advanced Code Editor
 :plugincode: advcode
 :altplugincode: code
