link text correction to make links work.
Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -193,8 +193,8 @@ For more information about this component, see the xref:dialog-components.adoc#i
 For more information about dialogs, see the xref:dialog-configuration.adoc[Dialog configuration] documentation.
 
 
-[[change]]
-== Change
+[[changes]]
+== Changes
 
 {productname} 6.6 also includes the following change:
 
