DOC-2108: admon-ai-pricing.adoc
Edited NOTE admonition to include a link macro pointing to the `aipricingurl` variable.

--- a/modules/ROOT/partials/misc/admon-ai-pricing.adoc
+++ b/modules/ROOT/partials/misc/admon-ai-pricing.adoc
@@ -1,1 +1,1 @@
-NOTE: This plugin is only available as a paid add-on to link:{pricingpage}/[a TinyMCE subscription].
+Note: This plugin is only available as a link:{aipricingurl}/[paid add-on] to link:{pricingpage}/[a TinyMCE subscription].
