--- a/modules/ROOT/pages/ai-proxy.adoc
+++ b/modules/ROOT/pages/ai-proxy.adoc
@@ -37,7 +37,9 @@ The proxy adds a layer of flexibility by allowing extra processing before the re
 .Sign up for the {productname} {pluginname}
 [%collapsible]
 ====
-The {productname} {pluginname} provides the end user Ui interaction components and workflows. This enables end users to make AI requests, modify, fine tune results and insert enhanced content back into the editor. The plugin also provides the server request component that sends user requests to the AI LLM service.
+The TinyMCE {pluginname} provides the end user Ui interaction components and workflows. This enables end users to make AI requests, modify, fine tune results and insert enhanced content back into the editor. The plugin also provides the server request component that sends user requests to the AI LLM service.
+
+Sign-up details are available link:{aipricingurl}[here].
 ====
 .Select a proxy server of your choice
 [%collapsible]
