DOC-2133: available-toolbar-buttons.adoc
Added :pluginpage: variables to code and codesample entries.

--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -87,11 +87,13 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 :plugincategory: opensource
 :pluginname: Code
 :plugincode: code
+:pluginpage: code.adoc
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: opensource
 :pluginname: Code Sample
 :plugincode: codesample
+:pluginpage: codesample.adoc
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
