--- a/modules/ROOT/pages/dialog-configuration.adoc
+++ b/modules/ROOT/pages/dialog-configuration.adoc
@@ -85,12 +85,12 @@ include::partial$configuration/dialog_streamContent.adoc[]
 
 By default a dialog is shown as a modal in the center of the editor viewport.
 
-This presented position can be changed by providing a second argument, with an appropriate value, to `editor.windowManager.open()`.
+This presented position can be changed by providing a second argument, with an appropriate value, to xref:apis/tinymce.windowmanager.adoc#open[`editor.windowManager.open()`].
 
 [[inline]]
 === `+inline+`
 
-The `+inline+` option, passed to xref:apis/tinymce.windowmanager.adoc#open[`editor.windowManager.open()`], sets the dialog’s presented position to one of two possiblities.
+The `+inline+` option, passed to `editor.windowManager.open()`, sets the dialog’s presented position to one of two possiblities.
 
 When added to a configuration with the value, `+toolbar+`, it sets the dialog to appear adjacent to the {productname} toolbar.
 
