--- a/modules/ROOT/partials/configuration/mentions_fetch.adoc
+++ b/modules/ROOT/partials/configuration/mentions_fetch.adoc
@@ -1,13 +1,7 @@
 [[mentions_fetch]]
 == `+mentions_fetch+`
 
-This option lets you request a list of users from your server that match a search query. The callback gets passed two parameters: one is the search query object, the other is the success callback to execute with the results. The query object has a term property that contains what the user has typed after the "@" sign.
-
-The success call should contain an array of users.
-
-NOTE: Only the first ten (10) users listed in the array are displayed in the Mentions UI presented to end-users.
-
-For information on the user properties to pass the success callback for the available mentions item types (`+mentions_item_type+`), see: xref:mentions.adoc#user-properties[User properties].
+This option lets you request a list of users from your server that match a search query. The callback gets passed two parameters: one is the search query object, the other is the success callback to execute with the results. The query object has a term property that contains what the user has typed after the "@" sign. The success call should contain an array of users. For information on the user properties to pass the success callback for the available mentions item types (`+mentions_item_type+`), see: xref:mentions.adoc#user-properties[User properties].
 
 *Type:* `+Function+`
 
