DOC-2148: 6.6.1-release-notes.adoc
Copy-edits.

--- a/modules/ROOT/pages/6.6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.1-release-notes.adoc
@@ -58,7 +58,7 @@ Previously when:
 . the **AI Assistant** dialog was open and contained a returned response; and
 . the *Insert* button was pressed
 
-The **AI Assistant** dialog closed but, if the inserted content was not visible, the {productname} editor instance did not scroll the material into view.
+the **AI Assistant** dialog closed but, if the inserted content was not visible, the {productname} editor instance did not scroll the returned response into view.
 
 **AI Assistant** 1.0.1 fixes this.
 
