DOC-2134: nav.adoc
Edited entry for 6.6.1 Improvement section: removed the plural s.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -407,7 +407,7 @@
 **** xref:6.6.1-release-notes.adoc#overview[Overview]
 **** xref:6.6.1-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 **** xref:6.6.1-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
-**** xref:6.6.1-release-notes.adoc#improvements[Improvements]
+**** xref:6.6.1-release-notes.adoc#improvement[Improvement]
 **** xref:6.6.1-release-notes.adoc#addition[Addition]
 **** xref:6.6.1-release-notes.adoc#change[Change]
 **** xref:6.6.1-release-notes.adoc#bug-fixes[Bug fixes]
