--- a/modules/ROOT/pages/6.6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.1-release-notes.adoc
@@ -120,9 +120,16 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 {productname} 6.6.1 also includes the following bug fixes:
 
 === On Safari and Firefox browsers, scroll positions were not always maintained when updating the content of a `streamContent: true` iframe dialog component
-//#TINY-10078 #TINY-10109
+//#TINY-10078
 
 // CCFR here.
+
+
+=== [Safari] iframe not consistently autoscrolling to bottom when streamContent: true
+//#TINY-10109
+
+// CCFR here.
+
 
 === Scrolling behavior was inconsistent when updating a `streamContent: true` iframe dialog component with content lacking an HTML document type declaration.
 //#TINY-10110
