DOC-xxxx: 6.6.1-release-notes.adoc
Write-up of TINY-yyyyy added: a warning message was sometimes printed to the browser console when closing a dialog that contained an iframe component.

--- a/modules/ROOT/pages/6.6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.1-release-notes.adoc
@@ -136,10 +136,20 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 // CCFR here.
 
-=== A warning message was sometimes printed to the browser console when closing a dialog that contains an iframe component
+=== A warning message was sometimes printed to the browser console when closing a dialog that contained an iframe component
 //#TINY-10070
 
-// CCFR here.
+In some circumstances, when a dialog that contained an iframe component was closed, the console warning message, *the component must be in a context to execute*, was generated.
+
+This happened because, while the dialog was closed, the currently focussed element was not within the {productname} instance. This caused the `onAction()` callback function to set the focus back to the (now closed) dialog element.
+
+In {productname} 6.6.1, a check has been implemented:
+
+* to see if the dialog still exists within the DOM; and
+* to ensure the element with focus is within the {productname} instance after a dialog is closed.
+
+As a consequence, the console warning is no longer generated when dialogs with iframe components are closed.
+
 
 === When an editable area was nested inside a non-editable area, creating lists was not possible
 //#TINY-10000
