DOC-2149: 6.6.1-release-notes.adoc
Markup typo correction: s/api/apis/.

--- a/modules/ROOT/pages/6.6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.1-release-notes.adoc
@@ -113,7 +113,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 === API comments/documentation: a markup typo and run-on sentences both corrected
 //#TINY-10073
 
-A markup typo in `/tinymce/modules/tinymce/src/core/main/ts/api/WindowManager.ts` resulted in an extraneous html markup tag displaying in the xref:api/tinymce.windowmanager.adoc[tinymce.WindowManager()] documentation.
+A markup typo in `/tinymce/modules/tinymce/src/core/main/ts/api/WindowManager.ts` resulted in an extraneous html markup tag displaying in the xref:/apis/tinymce.windowmanager.adoc[tinymce.WindowManager()] documentation.
 
 As well, two run-on sentences in the same file were corrected.
 
