--- a/modules/ROOT/pages/6.6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.1-release-notes.adoc
@@ -134,7 +134,7 @@ is automatically stored and rendered as
 
 [NOTE]
 ====
-An equivalent filtering option, `padd_empty_with_br` was xref:migration-from-5x.adoc/#previously-deprecated-items-now-removed[removed from {productname} 6.0.0].
+An equivalent filtering option, `padd_empty_with_br` was xref:migration-from-5x.adoc#previously-deprecated-items-now-removed[removed from {productname} 6.0.0].
 
 This new — and correctly spelled — option behaves in essentially identical fashion to the older option.
 ====
