DOC_2146: 6.6.1-release-notes.adoc
Typo correction.

--- a/modules/ROOT/pages/6.6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.1-release-notes.adoc
@@ -107,7 +107,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.6.1 includes a further content filtering option, `pad_empty_with_br`.
 
-COontent filtering options change the way {productname} manages input and output.
+Content filtering options change the way {productname} manages input and output.
 
 The `pad_empty_with_br` option, when set to `true`, places a `+<br>+` tag within empty block elements rather than the default non-breaking space entity, `+&nbsp;+`.
 
