--- a/modules/ROOT/pages/content-filtering.adoc
+++ b/modules/ROOT/pages/content-filtering.adoc
@@ -37,6 +37,8 @@ include::partial$configuration/invalid_elements.adoc[]
 
 include::partial$configuration/invalid_styles.adoc[]
 
+include::partial$configuration/pad_empty_with_br.adoc[]
+
 include::partial$configuration/protect.adoc[]
 
 include::partial$configuration/remove_trailing_brs.adoc[]
