DOC-2114: 6.0-release-notes-summary.adoc
Added notice of the replacement of previously deprecated `padd_empty_with_br` with correctly spelled `pad_empty_with_br` as of version 6.6.1 to table noting removal of `padd_empty_with_br`.

--- a/modules/ROOT/partials/release-notes/6.0-release-notes-summary.adoc
+++ b/modules/ROOT/partials/release-notes/6.0-release-notes-summary.adoc
@@ -242,7 +242,7 @@ The following elements were previously deprecated and have, with this release, b
 
 | `non_empty_elements`                  | Schema option |
 
-| `padd_empty_with_br`                  | Option        |
+| `padd_empty_with_br`                  | Option        | Replaced, as of {productname} 6.6.1, by xref:content-filtering.adoc#pad_empty_with_br[`pad_empty_with_br`].
 
 | `requestAnimationFrame`               | API           | From `Delay`.
 
