--- a/modules/ROOT/pages/6.6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.1-release-notes.adoc
@@ -49,7 +49,7 @@ The {productname} 6.6.1 release includes an accompanying release of the **AI Ass
 // CCFR here.
 
 
-==== when Safari on macOS was the host environment and a returned response was inserted into the {productname} editor, the inserted content did not scroll into view
+==== When Safari on macOS was the host environment and a returned response was inserted into the {productname} editor, the inserted content did not scroll into view
 //#TINY-10102
 
 Previously when:
